@@ -13,8 +13,8 @@ module M
       [0 <= y2 <= x2]. The seven other cases can be easily
       deduced by symmetry. *)
 
-  function x2: int
-  function y2: int
+  constant x2: int
+  constant y2: int
   axiom first_octant: 0 <= y2 <= x2
 
   (* The code.
