@@ -25,7 +25,7 @@ module M
 
   type vertex
 
-  function v : S.set vertex
+  constant v : S.set vertex
 
   function g_succ(vertex) : S.set vertex
 
