@@ -49,7 +49,7 @@ theory Mat22 "2x2 integer matrices"
 
   type t = {| a11: int; a12: int; a21: int; a22: int |}
 
-  function id : t = {| a11 = 1; a12 = 0; a21 = 0; a22 = 1 |}
+  constant id : t = {| a11 = 1; a12 = 0; a21 = 0; a22 = 1 |}
 
   function mult (x: t) (y: t) : t =
     {|
@@ -71,7 +71,7 @@ module FibonacciLogarithmic
   use import int.EuclideanDivision
   use import Mat22
 
-  function m1110 : t = {| a11 = 1; a12 = 1;
+  constant m1110 : t = {| a11 = 1; a12 = 1;
                           a21 = 1; a22 = 0 |}
 
   (* computes ((1 1) (1 0))^n in O(log(n)) time
