@@ -8,7 +8,7 @@ module M
   (** Memory model and definition of is_list *)
   type pointer
   type next = map pointer pointer
-  function null : pointer
+  constant null : pointer
 
   val value : ref (map pointer int)
   val next : ref (next)
@@ -191,7 +191,7 @@ module M2
   axiom pointer_dec : forall p1:pointer, p2 : pointer. p1 = p2 \/ p1 <> p2
 
   type next = map pointer pointer
-  function null : pointer
+  constant null : pointer
 
   val value : ref (map pointer int)
   val next : ref (next)
