@@ -49,7 +49,7 @@ theory Solution
   use export map.Map
 
   (* the number of queens *)
-  function n : int
+  constant n : int
 
   type solution = map int int
 
