@@ -149,6 +149,7 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
           <keyword>end</keyword>
           <keyword>exception</keyword>
           <keyword>export</keyword>
+          <keyword>constant</keyword>
           <keyword>function</keyword>
           <keyword>goal</keyword>
           <keyword>import</keyword>
