@@ -4,7 +4,7 @@ theory Abs
   type t
   predicate ge t t
   function neg t : t
-  function zero : t
+  constant zero : t
 
   function abs t : t
 
