@@ -1,12 +1,15 @@
 * marks an incompatible change
 
+  o [syntax] new syntax "constant x:ty" and "constant x:ty = e" to
+    introduce constants, as an alternative to "function"
+
 version 0.71, October 13, 2011
 ==============================
 
   o [examples] a lot of new program examples in directory examples/programs
   o [Why3replayer] new option -latex to output a proof session in LaTeX format
   o [WhyML] significant improvement of the efficiency of the WP calculus
-  o [WhyIDE] better coloring and source positioning including from front-ends 
+  o [WhyIDE] better coloring and source positioning including from front-ends
     such as Krakatoa and Jessie plugin of Frama-C
   o [WhyML] fixed labels and source locations in WPs
   o [Session] during reload, new method for pairing old and new subgoals
